# mikan-bot

./: .dockerignore  DOCKER_DEPLOYMENT.md  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.yml  docker-deploy.sh  env.example  pyproject.toml
src/plugins/: follower.py
src/plugins/chatgpt_turbo/: README.md  __init__.py  config.py  group_prompts.json  prompts.py
src/plugins/follower/: README.md  __init__.py  config.py  follower.py
src/plugins/help/: README.md  __init__.py
src/plugins/randpic/: README.md  USAGE.md  __init__.py  config.py  randpic.py
